@@ -1,0 +1,15 @@
+==========
+DocArticle
+==========
+
+:Author: Bill Bumgarner
+:Contact: bbum@codefab.com
+:Copyright: 2002 - Bill Bumgarner - All Rights Reserved
+:License: The MIT License -- see LICENSE.txt
+:Abstract: A writer for DocUtils_ that produces straight, non-CSS, HTML
+           output. 
+
+A plain HTML writer for docutils_.  Produces non-CSS based HTML that is
+compliant with the O'Reilly DevCenter's article submission guidelines.
+
+.. _DocUtils: http://docutils.sourceforge.net/
